--- a/index.html
+++ b/index.html
@@ -57,14 +57,14 @@
 			background-color: #FFFFFF;
 			border-collapse: collapse;
 			border-width: 2px;
-			border-color: #7ea8f8;
+			border-color: #d6d6d6;
 			border-style: solid;
 			color: #000000;
 		}
 
 		table.ttable td, table.ttable th {
 			border-width: 2px;
-			border-color: #7ea8f8;
+			border-color: #d6d6d6;
 			border-style: solid;
 			padding: 5px;
 		}
@@ -74,7 +74,7 @@
 		}
 
 		table.ttable thead {
-			background-color: #7ea8f8;
+			background-color: #d6d6d6; /* 7ea8f8 */
 		}
     </style>    
 </head>
