--- a/index.html
+++ b/index.html
@@ -8,22 +8,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <style type="text/css">
 		body {
-			background-color: #f0f0f2;
+			background-color: #0c0c0e;
 			margin: 0;
 			padding: 0;
 			font-family: -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
 			line-height: 10px;
+			color: #eeedf0;
 		}
 		div {
 			width: 600px;
 			margin: 5em auto;
 			padding: 2em;
-			background-color: #fdfdff;
+			background-color: #1e2023;
 			border-radius: 0.5em;
 			box-shadow: 2px 3px 7px 2px rgba(0,0,0,0.02);
 		}
 		a:link, a:visited {
-			color: #38488f;
+			color: #7ea8f8;
 			text-decoration: none;
 		}
 		@media (max-width: 700px) {
@@ -54,17 +55,17 @@
 
 		table.ttable {
 			width: 100%;
-			background-color: #FFFFFF;
+			background-color: #4f4f55;
 			border-collapse: collapse;
 			border-width: 2px;
-			border-color: #d6d6d6;
+			border-color: #3c3c41;
 			border-style: solid;
-			color: #000000;
+			color: #eeedf0;
 		}
 
 		table.ttable td, table.ttable th {
 			border-width: 2px;
-			border-color: #d6d6d6;
+			border-color: #3c3c41;
 			border-style: solid;
 			padding: 5px;
 		}
@@ -74,112 +75,117 @@
 		}
 
 		table.ttable thead {
-			background-color: #d6d6d6; /* 7ea8f8 */
+			background-color: #3c3c41; /* 7ea8f8 */
 		}
     </style>    
 </head>
-
 <body>
-<div>
-    <h1 style="margin-bottom: 35px;">Zwazing eSports Leaderboard</h1> <!-- use class gradient -->
-	<table class="ttable">
-		<thead>
-			<tr>
-				<th width="15px">Place</th>
-				<th width="75px">Points</th>
-				<th>Player</th>
-			</tr>
-		</thead>
-		<tbody>
-			<tr>
-				<th>1</th>
-				<td>18</td>
-				<td>Kosmowski</td>
-			</tr>
-			<tr>
-				<th>2</th>
-				<td>14</td>
-				<td>Magzik</td>
-			</tr>
-			<tr>
-				<th>3</th>
-				<td>11</td>
-				<td>tomeczeklmaooo</td>
-			</tr>
-			<tr>
-				<th>4</th>
-				<td>11</td>
-				<td>V1taMin</td>
-			</tr>
-			<tr>
-				<th>5</th>
-				<td>8</td>
-				<td>NESTVØLK</td>
-			</tr>
-			<tr>
-				<th>6</th>
-				<td>8</td>
-				<td>ufer</td>
-			</tr>
-			<tr>
-				<th>7</th>
-				<td>6</td>
-				<td>Z4XEL</td>
-			</tr>
-			<tr>
-				<th>8</th>
-				<td>6</td>
-				<td>Papajena</td>
-			</tr>
-			<tr>
-				<th>9</th>
-				<td>3</td>
-				<td>Gorzel</td>
-			</tr>
-			<tr>
-				<th>10</th>
-				<td>3</td>
-				<td>TRIGGER</td>
-			</tr>
-			<tr>
-				<th>11</th>
-				<td>3</td>
-				<td>Dima</td>
-			</tr>
-			<tr>
-				<th>12</th>
-				<td>3</td>
-				<td>Mańczak</td>
-			</tr>
-			<tr>
-				<th>13</th>
-				<td>0</td>
-				<td>wojciorini</td>
-			</tr>
-			<tr>
-				<th>14</th>
-				<td>0</td>
-				<td>Benger</td>
-			</tr>
-			<tr>
-				<th>15</th>
-				<td>---</td>
-				<td>---</td>
-		  	</tr>
-		  	<tr>
-				<th>16</th>
-				<td>---</td>
-				<td>---</td>
-			</tr>
-		</tbody>
-	</table>
-	<br>
-	<br>
-	<h4>Latest tournament brackets:</h4>
-    <p><a href="https://brackethq.com/b/3ce5/">September 2022</a> &bull;
-    <a href="#coming-soon">October 2022 (upcoming)</a></p>
-	<br>
-	<p style="text-align: center;">Copyright &copy; 2021 &mdash; <script>document.write(new Date().getFullYear())</script> tomeczeklmaodev</p>
-</div>
+	<div>
+		<h1 style="margin-bottom: 35px;text-align: center;">Zwazing eSports Leaderboard</h1> <!-- use class gradient -->
+		<table class="ttable">
+			<thead>
+				<tr>
+					<th width="15px">Place</th>
+					<th width="75px">Points</th>
+					<th>Player</th>
+				</tr>
+			</thead>
+			<tbody>
+				<tr>
+					<th>1</th>
+					<td>18</td>
+					<td>Kosmowski</td>
+				</tr>
+				<tr>
+					<th>2</th>
+					<td>14</td>
+					<td>Magzik</td>
+				</tr>
+				<tr>
+					<th>3</th>
+					<td>11</td>
+					<td>tomeczeklmaooo</td>
+				</tr>
+				<tr>
+					<th>4</th>
+					<td>11</td>
+					<td>V1taMin</td>
+				</tr>
+				<tr>
+					<th>5</th>
+					<td>8</td>
+					<td>NESTVØLK</td>
+				</tr>
+				<tr>
+					<th>6</th>
+					<td>8</td>
+					<td>ufer</td>
+				</tr>
+				<tr>
+					<th>7</th>
+					<td>6</td>
+					<td>Z4XEL</td>
+				</tr>
+				<tr>
+					<th>8</th>
+					<td>6</td>
+					<td>Papajena</td>
+				</tr>
+				<tr>
+					<th>9</th>
+					<td>3</td>
+					<td>Gorzel</td>
+				</tr>
+				<tr>
+					<th>10</th>
+					<td>3</td>
+					<td>TRIGGER</td>
+				</tr>
+				<tr>
+					<th>11</th>
+					<td>3</td>
+					<td>Dima</td>
+				</tr>
+				<tr>
+					<th>12</th>
+					<td>3</td>
+					<td>Mańczak</td>
+				</tr>
+				<tr>
+					<th>13</th>
+					<td>0</td>
+					<td>wojciorini</td>
+				</tr>
+				<tr>
+					<th>14</th>
+					<td>0</td>
+					<td>Benger</td>
+				</tr>
+				<tr>
+					<th>15</th>
+					<td>---</td>
+					<td>---</td>
+				</tr>
+				<tr>
+					<th>16</th>
+					<td>---</td>
+					<td>---</td>
+				</tr>
+			</tbody>
+		</table>
+		<br>
+		<br>
+		<h4>Latest tournament brackets:</h4>
+		<p><a href="https://brackethq.com/b/3ce5/">September 2022</a> &bull;
+		<a href="#coming-soon">October 2022 (upcoming)</a></p>
+		<br>
+		<p style="text-align: center;">Copyright &copy; 2021 &mdash; <script>document.write(new Date().getFullYear())</script> tomeczeklmaodev</p>
+	</div>
+	<script>
+		function ToggleMode() {
+			var element = document.body;
+			element.classList.toggle("dark-mode");
+		}
+	</script>
 </body>
 </html>
