Add link for next 1v1

--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
 		<br>
 		<h4>Latest tournament brackets:</h4>
 		<p><a href="https://brackethq.com/b/3ce5/">September 2022</a> &bull;
-		<a href="#coming-soon">October 2022 (upcoming)</a></p>
+		<a href="https://brackethq.com/b/sma7/">October 2022</a></p>
 		<br>
 		<p style="text-align: center;">Copyright &copy; 2021 &mdash; <script>document.write(new Date().getFullYear())</script> tomeczeklmaodev</p>
 	</div>
